--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -37,6 +37,11 @@ h1 {
   }
 }
 
+.ulc-logo {
+  position: relative;
+  top: 20px;
+}
+
 #hero-bar {
   width: 300px;
   height: 5px;
@@ -57,8 +62,10 @@ h1 {
   @media (min-width: 968px) {
     display: flex;
     justify-content: space-between;
-    padding-left: 50px;
+    padding-left: 15%;
+    padding-right: 12%;
     margin-right: -30px;
+
   }
 }
 
@@ -134,8 +141,9 @@ h1 {
 #menu {
   float: right;
   position: relative;
-  top: -20px;
-}
+  top: 10px;
+  right: 50px;
+  }
 
 #play-circle {
   border-radius: 100%;
