--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -25,19 +25,18 @@
 
 .hero-overlay {
   position: relative;
-  top: 75px;
-  right: 70px;
+  top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 50%;
+  height: 60%;
   min-height: 270px;
   margin: 0 auto;
   @media (min-width: 968px) {
-
-    right: 100px;
-    top: 80px;
+    top: 100px;
+    height: 70%;
+    min-height: 500px;
   }
 }
 
@@ -48,21 +47,22 @@
   }
 }
 
-.nav-bar {
+#nav-list {
   display: none;
+  @media (min-width: 968px) {
+    display: flex;
+  }
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 @media (min-width: 968px) {
-  .nav-bar {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  top: 25px;
-  left: 270px;
-  @media (min-width: 1200px) {
-    left: 420px;
-  }
-  }
+
 
   .nav-bar ul {
     display: flex;
@@ -100,7 +100,7 @@
   padding-top: 18px;
   font-family: $font-stack-secondary;
   position: relative;
-  top: 70px;
+  top: 170px;
   z-index: 3
   }
 }
@@ -109,10 +109,10 @@
   display: none;
   transform: rotate(90deg);
   position: relative;
-  top: 25px;
   z-index: 2;
   @media (min-width: 968px){
     display: inline-block;
+    top: 100px;
   }
 }
 
